# st_login_form

./: .cruft.json  .gitignore  .pre-commit-config.yaml  .sourcery.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  adhoc.ipynb  demo.py  pyproject.toml  requirements.txt  setup.py  test.py  utils.py
.devcontainer/: devcontainer.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish_PYPI_each_tag.yml
.streamlit/: config.toml
assets/: sidebar.html
src/st_login_form/: __init__.py  auth.py  db.py
src/st_login_form/_helpers/: auth.py  db.py  forms.py
src/streamlit_login/: __init__.py
